objects/TW1_Bloco__c.object
<CustomObject>
    <description>Bloco vinculado ao Empreendimento</description>
    <fields>
        <fullName>TW1_CodigoObra_UAU__c</fullName>
        <formula>TW1_Empreendimento__r.TW1_Codigo_Obra_UAU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código Obra ERP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Codigo_Bloco_UAU__c</fullName>
        <description>Código do Bloco no UAU</description>
        <label>Código do Bloco no ERP</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Codigo_Obra_UAU__c</fullName>
        <description>Código da Obra no ERP</description>
        <label>Codigo Obra ERP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Codigo_Produto_UAU__c</fullName>
        <description>Código do produto no UAU</description>
        <externalId>true</externalId>
        <label>Código do produto no ERP</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Fim_Obra__c</fullName>
        <label>Data Fim da Obra</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Inicio_Obra__c</fullName>
        <label>Data Inicio da Obra</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Descricao_Bloco_UAU__c</fullName>
        <label>Descrição Bloco ERP</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Descricao__c</fullName>
        <description>Descrição do Bloco no UAU</description>
        <label>Descrição</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Empreendimento__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo de relacionamento com  objeto Empreendimento</description>
        <label>Empreendimento</label>
        <referenceTo>TW1_Empreendimento__c</referenceTo>
        <relationshipLabel>Blocos</relationshipLabel>
        <relationshipName>Blocos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Bloco_UAU__c</fullName>
        <description>Id do Bloco no UAU</description>
        <label>ID do Bloco no ERP</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Liberado_Repasse__c</fullName>
        <label>Liberado Repasse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Repasse_ja_liberado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repasse já liberado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Responsavel_Manutencao_Vistoria__c</fullName>
        <label>Responsável Manutenção/Vistoria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engenharia</fullName>
                    <default>true</default>
                    <label>Engenharia</label>
                </value>
                <value>
                    <fullName>Manutenção</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bloco</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome do Bloco</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blocos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LIberadoParaRepasse</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
     ISCHANGED(TW1_Liberado_Repasse__c),
     TW1_Repasse_ja_liberado__c = True
   )</errorConditionFormula>
        <errorDisplayField>TW1_Liberado_Repasse__c</errorDisplayField>
        <errorMessage>Depois do Repasse Liberado não é possível alterar este campo. Qualquer problema favor informar ao Administrador do Sistema.</errorMessage>
    </validationRules>
</CustomObject>